somewhat tea page render

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 /*GENERAL STYLES*/
 
 body {
-/*    margin-top: 52px;*/
     width: 100vw;
     height: 100vh;
+    padding-top:50px;
 }
 
 /*footer info*/
@@ -32,7 +32,7 @@ footer p {
     /*  border: 1px solid red;*/
     height: 100vh;
     width: 100vw;
-    overflow: auto;
+    overflow: hidden;
 }
 
 
@@ -62,7 +62,8 @@ footer p {
 /*TEA PAGE STYLES*/
 
 #about-page {
-    /*background-image: url(./img/photo-1437315306147-0923bdb3fc12a.jpg);*/
+
+    background-image: url(http://i.imgur.com/MGVOYGl.jpg);
     background-size: cover;
     background-attachment: fixed;
     color: white;
@@ -70,28 +71,32 @@ footer p {
     width: 100vw;
     height: 100vh;
     /*  border: 1px solid blue;*/
-    padding-left: 300px;
-    padding-right: 300px;
+    padding-top: 20px;
+    padding-left: 250px;
+    padding-right: 250px;
     text-align: left;
 }
 
 
 /*about.js text styling*/
 #blackbox {
-    font-size: 15px;
     background-color: #1a1a1a;
     width: auto;
     height: auto;
-    padding: 30px;
     opacity: 0.7;
+    padding-top: 15px;
 }
 
-#blackbox p{
-  text-indent: 20px;
+#blackbox-text{
+        font-size: 18px;
+        text-indent: 25px;
+        margin: 2px;
+        padding: 15px;
 }
 
 #blackbox h1{
-  text-align: center;
+    text-align: center;
+    font-size: 25px;
 }
 
 .App {
@@ -171,8 +176,7 @@ footer p {
 
 }
 
-#tea-grid {
-  margin-top: 50px;
+#tea-grid h2{
 }
 
 .teaCol {
@@ -180,4 +184,19 @@ footer p {
 }
 .arrUl{
     list-style-type: none;
+    overflow: auto;
 }
+
+/*displaytea's fixed column css*/
+
+/* content styles */
+
+
+.row{
+    border: 1px solid red;
+}
+
+.row-height{
+    border: 1px solid blue;
+}
+
