--- a/src/App.css
+++ b/src/App.css
@@ -242,13 +242,13 @@ background-image: url("http://img.wallpaperfolder.com/f/5574BC310A55/tea-fields-
 }
 
 .btn-primary {
-margin-left: relative;
+margin-left: 0;
 font-size: 20px;
 font-weight: bold;
 padding-top: 5px;
 border-radius: 1em;
 border: 2px solid black;
-margin-left: 120px;
+align-items: center;
 }
 
 .div.text{
